PR/53207: David Binderman: Use logical and